--- a/Exporting_Origen_Data/Combining_CSVs.ipynb
+++ b/Exporting_Origen_Data/Combining_CSVs.ipynb
@@ -33,8 +33,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Users/colingerber/anaconda/lib/python2.7/site-packages/pytz-2013b-py2.7.egg/pytz/__init__.py:35: UserWarning: Module argparse was already imported from /Users/colingerber/anaconda/python.app/Contents/lib/python2.7/argparse.pyc, but /Users/colingerber/anaconda/lib/python2.7/site-packages is being added to sys.path\n",
+        "  from pkg_resources import resource_stream\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -56,27 +65,41 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df30 = pd.read_csv('1.8/compiled_export.csv')\n",
-      "df35 = pd.read_csv('1.9/compiled_export.csv')\n",
-      "df40 = pd.read_csv('2.0/compiled_export.csv')\n",
-      "df45 = pd.read_csv('2.1/compiled_export.csv')\n",
-      "df50 = pd.read_csv('2.2/compiled_export.csv')"
+      "df30 = pd.read_csv('3.0/compiled_export.csv')\n",
+      "df35 = pd.read_csv('3.5/compiled_export.csv')\n",
+      "df40 = pd.read_csv('4.0/compiled_export.csv')\n",
+      "df45 = pd.read_csv('4.5/compiled_export.csv')\n",
+      "df50 = pd.read_csv('5.0/compiled_export.csv')\n",
+      "df55 = pd.read_csv('5.5/compiled_export.csv')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "Manual input\n",
+      "\n",
+      "- num_files: enter the number of out files there were per enrichment\n",
+      "- df_list: enter a list of the dataframe names (do not put them in as strings, this is a list of objects)\n",
+      "- enrichment_list: enter a list of the enrichments that you used"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df_list = [df30, df35, df40, df45, df50]"
+      "num_files = 60\n",
+      "df_list = [df30, df35, df40, df45, df50, df55]\n",
+      "enrichment_list = [3.0, 3.5, 4.0, 4.5, 5.0, 5.5]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -98,7 +121,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -123,42 +146,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "index = range(125)\n",
-      "df_tot = pd.DataFrame(index = index, columns = columns)\n",
-      "df_tot"
+      "# index = range((num_files*len(df_list)))\n",
+      "# df_tot = pd.DataFrame(index = index, columns = columns)\n",
+      "# df_tot.head()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<pre>\n",
-        "&lt;class 'pandas.core.frame.DataFrame'&gt;\n",
-        "Int64Index: 250 entries, 0 to 249\n",
-        "Data columns (total 4 columns):\n",
-        "pu240/pu239    0  non-null values\n",
-        "pu238/pu239    0  non-null values\n",
-        "pu242/pu239    0  non-null values\n",
-        "pu241/pu239    0  non-null values\n",
-        "dtypes: object(4)\n",
-        "</pre>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "<class 'pandas.core.frame.DataFrame'>\n",
-        "Int64Index: 250 entries, 0 to 249\n",
-        "Data columns (total 4 columns):\n",
-        "pu240/pu239    0  non-null values\n",
-        "pu238/pu239    0  non-null values\n",
-        "pu242/pu239    0  non-null values\n",
-        "pu241/pu239    0  non-null values\n",
-        "dtypes: object(4)"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "raw",
@@ -180,27 +175,46 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "temp_list = []\n",
-      "temp_list1 = []\n",
-      "new_col = column_gen()\n",
+      "#looping through process\n",
       "\n",
-      "for item in list(df30['pu240/pu239']):\n",
+      "for num in range(len(df_list)):\n",
+      "    \n",
+      "    temp_list = []\n",
+      "    new_col = column_gen()\n",
+      "    \n",
+      "    #converts all the values in the df to float\n",
+      "    #removes all strings and add all values to list\n",
+      "    for item in list(df_list[num]['pu240/pu239']):\n",
+      "        try:\n",
+      "            float(item)\n",
+      "            temp_list.append(item)\n",
+      "        except:\n",
+      "            continue\n",
+      "            \n",
+      "    #the index of the temp dadtaframe is the amount of out files \n",
+      "    #for each enrichment.\n",
+      "    temp_index = range(num_files)\n",
+      "\n",
+      "    \n",
+      "    df_temp = pd.DataFrame(index = temp_index, columns = columns)\n",
+      "    \n",
+      "    #change the temp lists here\n",
+      "    df_temp[next(new_col)] = temp_list[0:num_files]\n",
+      "    df_temp[next(new_col)] = temp_list[num_files:(num_files*2)]\n",
+      "    df_temp[next(new_col)] = temp_list[(num_files*2):(num_files*3)]\n",
+      "    df_temp[next(new_col)] = temp_list[(num_files*3):(num_files*4)]\n",
+      "    \n",
+      "    #create a column for the enrichment\n",
+      "    enrich = enrichment_list[num]\n",
+      "    df_temp['enrichment'] = [enrich]*num_files\n",
+      "    \n",
       "    try:\n",
-      "        float(item)\n",
-      "        temp_list.append(item)\n",
+      "        df_tot\n",
       "    except:\n",
-      "        continue\n",
-      "#change the range here\n",
-      "index = range(25)\n",
-      "\n",
-      "df30_new = pd.DataFrame(index = index, columns = columns)\n",
-      "\n",
-      "#change the temp lists here\n",
-      "df30_new[next(new_col)] = temp_list[0:25]\n",
-      "df30_new[next(new_col)] = temp_list[25:50]\n",
-      "df30_new[next(new_col)] = temp_list[50:75]\n",
-      "df30_new[next(new_col)] = temp_list[75:100]\n",
-      "            "
+      "        df_tot = df_temp\n",
+      "    else:\n",
+      "        #append to the total dataframe\n",
+      "        df_tot = df_tot.append(df_temp)"
      ],
      "language": "python",
      "metadata": {},
@@ -208,140 +222,88 @@
      "prompt_number": 7
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "temp_list = []\n",
-      "temp_list1 = []\n",
-      "new_col = column_gen()\n",
-      "\n",
-      "for item in list(df35['pu240/pu239']):\n",
-      "    try:\n",
-      "        float(item)\n",
-      "        temp_list.append(item)\n",
-      "    except:\n",
-      "        continue\n",
-      "index = range(25)\n",
-      "df35_new = pd.DataFrame(index = index, columns = columns)\n",
-      "df35_new[next(new_col)] = temp_list[0:25]\n",
-      "df35_new[next(new_col)] = temp_list[25:50]\n",
-      "df35_new[next(new_col)] = temp_list[50:75]\n",
-      "df35_new[next(new_col)] = temp_list[75:100]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "temp_list = []\n",
-      "temp_list1 = []\n",
-      "new_col = column_gen()\n",
-      "\n",
-      "for item in list(df40['pu240/pu239']):\n",
-      "    try:\n",
-      "        float(item)\n",
-      "        temp_list.append(item)\n",
-      "    except:\n",
-      "        continue\n",
-      "index = range(25)\n",
-      "df40_new = pd.DataFrame(index = index, columns = columns)\n",
-      "df40_new[next(new_col)] = temp_list[0:25]\n",
-      "df40_new[next(new_col)] = temp_list[25:50]\n",
-      "df40_new[next(new_col)] = temp_list[50:75]\n",
-      "df40_new[next(new_col)] = temp_list[75:100]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "temp_list = []\n",
-      "temp_list1 = []\n",
-      "new_col = column_gen()\n",
-      "\n",
-      "for item in list(df45['pu240/pu239']):\n",
-      "    try:\n",
-      "        float(item)\n",
-      "        temp_list.append(item)\n",
-      "    except:\n",
-      "        continue\n",
-      "index = range(25)\n",
-      "df45_new = pd.DataFrame(index = index, columns = columns)\n",
-      "df45_new[next(new_col)] = temp_list[0:25]\n",
-      "df45_new[next(new_col)] = temp_list[25:50]\n",
-      "df45_new[next(new_col)] = temp_list[50:75]\n",
-      "df45_new[next(new_col)] = temp_list[75:100]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "temp_list = []\n",
-      "temp_list1 = []\n",
-      "new_col = column_gen()\n",
-      "\n",
-      "for item in list(df50['pu240/pu239']):\n",
-      "    try:\n",
-      "        float(item)\n",
-      "        temp_list.append(item)\n",
-      "    except:\n",
-      "        continue\n",
-      "index = range(25)\n",
-      "df50_new = pd.DataFrame(index = index, columns = columns)\n",
-      "df50_new[next(new_col)] = temp_list[0:25]\n",
-      "df50_new[next(new_col)] = temp_list[25:50]\n",
-      "df50_new[next(new_col)] = temp_list[50:75]\n",
-      "df50_new[next(new_col)] = temp_list[75:100]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "heading",
-     "level": 4,
-     "metadata": {},
-     "source": [
-      "Combining the DataFrames"
-     ]
-    },
-    {
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Make sure that all of your data frames are being combined.\n",
-      "If they are not copy a new line and update the df names so that \n",
-      "the final df has all of the df's you created earlier appended \n",
-      "into it."
+      "A check to make sure the stats on the dataframe make sense (especially length)"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df1 = df30_new.append(df35_new)\n",
-      "df2 = df1.append(df40_new)\n",
-      "df3 = df2.append(df45_new)\n",
-      "df4 = df3.append(df50_new)"
+      "df_tot.describe()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>enrichment</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>count</th>\n",
+        "      <td> 360.000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>mean</th>\n",
+        "      <td>   4.250000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>std</th>\n",
+        "      <td>   0.855101</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>min</th>\n",
+        "      <td>   3.000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>25%</th>\n",
+        "      <td>   3.500000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>50%</th>\n",
+        "      <td>   4.250000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>75%</th>\n",
+        "      <td>   5.000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>max</th>\n",
+        "      <td>   5.500000</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>8 rows \u00d7 1 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "       enrichment\n",
+        "count  360.000000\n",
+        "mean     4.250000\n",
+        "std      0.855101\n",
+        "min      3.000000\n",
+        "25%      3.500000\n",
+        "50%      4.250000\n",
+        "75%      5.000000\n",
+        "max      5.500000\n",
+        "\n",
+        "[8 rows x 1 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -366,8 +328,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -377,8 +338,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -403,8 +363,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "code",
