update both Exporting notebooks and moved Regression readme.

--- a/Exporting_Origen_Data/Combining_CSVs.ipynb
+++ b/Exporting_Origen_Data/Combining_CSVs.ipynb
@@ -135,40 +135,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Update the range based on how much data you have.\n",
-      "For example if you have 50 data points per column for each file and 5 files then you would \n",
-      "set the range for 250.\n",
-      "\n",
-      "You then create an empty pandas DataFrame that you will be appending to."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# index = range((num_files*len(df_list)))\n",
-      "# df_tot = pd.DataFrame(index = index, columns = columns)\n",
-      "# df_tot.head()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "Change the range to the amount of data you have per file.\n",
-      "For example if you have 50 data points per column for each file, change the range to 50.\n",
-      "Also update the temp_list[] to reflect the change in the range.\n",
-      "So for a range of 50 the first temp_list would be temp_list[0:50] and the second would be temp_list[50:100].\n",
-      "\n",
-      "There should be one copy of the next chunk of code for each\n",
-      "csv file you imported. If there are two many delete the extras.\n",
-      "If there are to few copy new ones and update them. Make sure to update\n",
-      "the names of the data frame. For example you would change df30 to the\n",
-      "name of the extra df and then update the df30_new's to reflect that."
+      "This loops through each of your csv files, breaks up the data into ratio columns (ie. 'pu240/pu239'), and then combines them all into a total dataframe that you can then save to a csv."
      ]
     },
     {
@@ -198,7 +165,7 @@
       "    \n",
       "    df_temp = pd.DataFrame(index = temp_index, columns = columns)\n",
       "    \n",
-      "    #change the temp lists here\n",
+      "    #breaking up the data into columns of ratios.\n",
       "    df_temp[next(new_col)] = temp_list[0:num_files]\n",
       "    df_temp[next(new_col)] = temp_list[num_files:(num_files*2)]\n",
       "    df_temp[next(new_col)] = temp_list[(num_files*2):(num_files*3)]\n",
@@ -324,7 +291,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#df_sorted = df3.sort(columns, ascending = False)"
+      "#df_sorted = df_tot.sort(columns, ascending = False)"
      ],
      "language": "python",
      "metadata": {},
@@ -334,7 +301,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#df_sorted.to_excel('BWR_Combined_notsorted.xlsx', 'Sheet1', index = False)"
+      "#df_sorted.to_excel('BWR_Combined_sorted.xlsx', 'Sheet1', index = False)"
      ],
      "language": "python",
      "metadata": {},
@@ -352,14 +319,14 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Change the df name (df4) to final df created in the line above."
+      "Make sure that the df name is correct (currently df_tot)."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df4.to_excel('BWR_Combined_notsorted.xlsx', 'Sheet1', index = False)"
+      "df_tot.to_excel('BWR_Combined.xlsx', 'Sheet1', index = False)"
      ],
      "language": "python",
      "metadata": {},
